--- a/client/homepage-responsiveness/hp-responsiveness.html
+++ b/client/homepage-responsiveness/hp-responsiveness.html
@@ -13,25 +13,26 @@
 
 
     <div class="frame">
-        <img class="bottom-left" src="/public/images/images-responsiveness/frame-bottom-left.png">
-        <img class="top-left" src="/public/images/images-responsiveness/frame-top-left.png">
-        <div class="repeating-wall-left"></div>
+        <img class="bottom-left layer-2" src="/public/images/images-responsiveness/frame-bottom-left.png">
+        <img class="top-left layer-2" src="/public/images/images-responsiveness/frame-top-left.png">
+        <div class="repeating-wall-left layer-2"></div>
 
-        <div class="repeating-cage"></div>
-        <div class="repeating-floor">
-            <div class="prop-container">
-                <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.png">
-                <img class="props" src="/public/images/images-responsiveness/props.png">
-                <h2>Bekijk <span class="break"></span>Projecten</h2>
-            </div>
+        <div class="repeating-cage layer-2"></div>
+        <div class="repeating-floor layer-2"></div>
+        <div class="prop-container layer-1">
+            <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.png">
+            <img class="props" src="/public/images/images-responsiveness/props.png">
+            <h2>Bekijk <span class="break"></span>Projecten</h2>
         </div>
-        <div class="repeating-roof">
+        <div class="repeating-roof layer-2">
         </div>
 
-        <div class="repeating-wall-right"></div>
-        <img class="bottom-right" src="/public/images/images-responsiveness/frame-bottom-right.png">
-        <img class="top-right" src="/public/images/images-responsiveness/frame-top-right.png">
+        <div class="repeating-wall-right layer-2"></div>
+        <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.png">
+        <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.png">
     </div>
+
+    <input id="camera" type="range" min="0" max="100" value="50" step=".001" name="unitless-value">
 
     <script src="hp-responsiveness.js"></script>
 
