comit voor maarten

--- a/client/homepage-responsiveness/hp-responsiveness.html
+++ b/client/homepage-responsiveness/hp-responsiveness.html
@@ -13,6 +13,10 @@
 
 
     <div class="frame">
+        <div class="audience layer-3">
+            <img src="/public/images/images-responsiveness/audience.png">
+        </div>
+
         <img class="bottom-left layer-2" src="/public/images/images-responsiveness/frame-bottom-left.png">
         <img class="top-left layer-2" src="/public/images/images-responsiveness/frame-top-left.png">
         <div class="repeating-wall-left layer-2"></div>
