--- a/client/homepage-responsiveness/hp-responsiveness.html
+++ b/client/homepage-responsiveness/hp-responsiveness.html
@@ -13,6 +13,15 @@
 
 
     <div class="frame">
+        <nav class="logo-container layer-1">
+            <div class="hanging-sign">
+                <div class="cable"></div>
+                <div class="cable"></div>
+                <img class="logo" src="/public/images/images-responsiveness/hanging-logo.png">
+            </div>
+            <a href="#" class="nav-text">Over<span class="break">de man</span></a>
+        </nav>
+
         <div class="audience layer-3">
             <img src="/public/images/images-responsiveness/audience.png">
         </div>
@@ -23,17 +32,18 @@
 
         <div class="repeating-cage layer-2"></div>
         <div class="repeating-floor layer-2"></div>
-        <div class="prop-container layer-1">
+        <nav class="prop-container layer-1">
             <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.png">
             <img class="props" src="/public/images/images-responsiveness/props.png">
-            <h2>Bekijk <span class="break"></span>Projecten</h2>
-        </div>
+            <a href="#" class="nav-text">Bekijk<span class="break"></span>Projecten</a>
+        </nav>
         <div class="repeating-roof layer-2">
         </div>
 
         <div class="repeating-wall-right layer-2"></div>
         <img class="bottom-right layer-2" src="/public/images/images-responsiveness/frame-bottom-right.png">
         <img class="top-right layer-2" src="/public/images/images-responsiveness/frame-top-right.png">
+
     </div>
 
     <script src="hp-responsiveness.js"></script>
