--- a/client/homepage-responsiveness/hp-responsiveness.html
+++ b/client/homepage-responsiveness/hp-responsiveness.html
@@ -17,7 +17,10 @@
             <div class="hanging-sign">
                 <div class="cable"></div>
                 <div class="cable"></div>
-                <img class="logo" src="/public/images/images-responsiveness/hanging-logo.png">
+                <div class="logo">
+                    <img src="/public/images/images-responsiveness/hanging-logo.png">
+                    <div class="gradient"></div>
+                </div>
             </div>
             <a href="#" class="nav-text">Over<span class="break">de man</span></a>
         </nav>
