--- a/client/homepage-responsiveness/hp-responsiveness.html
+++ b/client/homepage-responsiveness/hp-responsiveness.html
@@ -13,7 +13,7 @@
 
 
     <div class="frame">
-        <nav class="logo-container layer-1">
+        <a href="#" class="logo-container layer-1">
             <div class="hanging-sign">
                 <div class="cable"></div>
                 <div class="cable"></div>
@@ -22,8 +22,9 @@
                     <div class="gradient"></div>
                 </div>
             </div>
-            <a href="#" class="nav-text">Over<span class="break">de man</span></a>
-        </nav>
+            <h2 href="#" class="nav-text">Over<span class="break">de man</span></h2>
+            <span class="pulse"></span>
+        </a>
 
         <div class="audience layer-3">
             <img src="/public/images/images-responsiveness/audience.png">
@@ -35,11 +36,13 @@
 
         <div class="repeating-cage layer-2"></div>
         <div class="repeating-floor layer-2"></div>
-        <nav class="prop-container layer-1">
+
+        <a href="#" class="prop-container layer-1">
             <img class="prop-shadows" src="/public/images/images-responsiveness/prop-shadows.png">
             <img class="props" src="/public/images/images-responsiveness/props.png">
-            <a href="#" class="nav-text">Bekijk<span class="break"></span>Projecten</a>
-        </nav>
+            <h2 href="#" class="nav-text">Bekijk<span class="break"></span>Projecten</h2>
+            <span class="pulse"></span>
+        </a>
         <div class="repeating-roof layer-2">
         </div>
 
