--- a/client/homepage-responsiveness/hp-responsiveness.html
+++ b/client/homepage-responsiveness/hp-responsiveness.html
@@ -43,6 +43,12 @@
             <h2 href="#" class="nav-text">Bekijk<span class="break"></span>Projecten</h2>
             <span class="pulse"></span>
         </a>
+
+        <div class="cannon-container layer-1">
+            <img class="cannon-shadow" src="/public/images/images-responsiveness/cannon-shadow.png" alt="">
+            <img class="cannon" src="/public/images/images-responsiveness/cannon.png" alt="">
+        </div>
+
         <div class="repeating-roof layer-2">
         </div>
 
